# comet

./: .gitignore  Cargo.toml  Makefile  README-zh.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
client/: Cargo.toml
client/examples/: client.rs
client/src/: client.rs  connection.rs  dns.rs  lib.rs
client/src/client/: consumer.rs  producer.rs
client/src/connection/: manager.rs  reader.rs  writer.rs
common/: Cargo.toml
common/src/: codec.rs  defer.rs  io.rs  lib.rs  mtls.rs  protocol.rs  types.rs  utils.rs
common/src/codec/: bincode.rs  flexbuffers.rs  json.rs  msgpack.rs
common/src/io/: reader.rs  writer.rs
common/src/io/writer/: pipeline.rs  pool.rs
common/src/protocol/: acknowledge.rs  connect.rs  consumer.rs  control_flow.rs  producer.rs  publish.rs  response.rs  send.rs
common/src/utils/: local.rs  snoyflake.rs
crates/common/: Cargo.toml
crates/common/src/: addr.rs  codec.rs  error.rs  http.rs  id.rs  io.rs  lib.rs  protocol.rs  types.rs  utils.rs
crates/common/src/codec/: bincode.rs  json.rs
crates/common/src/http/: api.rs  topic.rs
crates/common/src/id/: distribute.rs  distribute_id.rs  local.rs
crates/common/src/io/: reader.rs  writer.rs
crates/common/src/io/writer/: pipeline.rs  pool.rs
crates/common/src/protocol/: acknowledge.rs  connect.rs  consumer.rs  control_flow.rs  producer.rs  publish.rs  response.rs  send.rs
crates/common/src/utils/: checkers.rs  defer.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs  stack_error.rs
misc/: certs-generate.sh  docker-compose.yml
misc/https/: comet-public.http
misc/pgbouncer/: userlists.txt
server/: Cargo.toml
server/examples/: server.rs
server/src/: broker.rs  client.rs  distributed.rs  lib.rs  meta.rs  quic.rs  scheme.rs  server.rs  snoyflake.rs  storage.rs
server/src/broker/: state.rs  subscription.rs  topic.rs
server/src/broker/subscription/: delayed_tracker.rs  dispatch.rs  retention.rs
server/src/client/: reader.rs
server/src/distributed/: election.rs  lease.rs
server/src/meta/: etcd.rs  mem.rs  redb.rs
server/src/meta/etcd/: api.rs  lease.rs
server/src/scheme/: distributed.rs  local_memory.rs  local_persist.rs
server/src/server/: http.rs  meta.rs  quic.rs
server/src/server/http/: router.rs
server/src/server/meta/: etcd.rs  mem.rs
server/src/server/meta/etcd/: election.rs  lease.rs
server/src/storage/: mem.rs  postgres.rs  sqlite.rs
