[workspace]
resolver = "2"
members = ["client", "crates/*", "server"]

[workspace.dependencies]
snafu = "0.8.2"
s2n-quic = "1.36.0"
tracing = "0.1.40"
comet-common = { version = "*", path = "./crates/common" }
common-error = { version = "*", path = "./crates/error" }
common-macro = { version = "*", path = "./crates/macro" }
tokio-util = "0.7.10"
tokio = "1.37.0"
futures = "0.3.30"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
parking_lot = "0.12.1"
bytes = "1.6.0"
serde = { version = "1.0.198", features = ["derive"] }
axum = "0.7.5"
reqwest = "0.12.3"
metrics = "0.22.3"
serde_json = "1.0.116"
