[package]
name = "comet-client"
version = "0.1.0"
edition = "2021"

[dependencies]
snafu.workspace = true
comet-common.workspace = true
common-macro.workspace = true
common-error.workspace = true
s2n-quic.workspace = true
tracing.workspace = true
tokio.workspace = true
futures.workspace = true
chrono.workspace = true
pin-project = "1.1.5"
tokio-util.workspace = true
bytes.workspace = true
tokio-stream = "0.1.15"
serde.workspace = true
serde_json.workspace = true
metrics.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "signal",
    "tracing",
] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
tracing-opentelemetry = "0.23.0"
console-subscriber = "0.2.0"
tracing-subscriber = "0.3"
opentelemetry = "0.23.0"
opentelemetry-otlp = "0.15.0"
