[package]
name = "comet-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.114"
serde = "1.0.197"
bytes = "1.5.0"
bincode = "1.3.3"
tokio-util.workspace = true
snafu.workspace = true
serde_bytes = "0.11.14"
flexbuffers = "2.0.0"
chrono = { workspace = true, features = ["serde"] }
parking_lot.workspace = true
s2n-quic.workspace = true
futures.workspace = true
tokio.workspace = true
rmp-serde = "1.1.2"
tracing.workspace = true
