[package]
name = "comet-server"
version = "0.1.0"
edition = "2021"

[dependencies]
comet-common.workspace = true
snafu.workspace = true
tokio-util.workspace = true
s2n-quic.workspace = true
tracing.workspace = true
tokio.workspace = true
etcd-client = "0.12.4"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"] }
futures.workspace = true
axum = "0.7.4"
reqwest = "0.12.1"
chrono.workspace = true
parking_lot.workspace = true
bytes.workspace = true
