[package]
name = "comet-server"
version = "0.1.0"
edition = "2021"

[dependencies]
comet-common.workspace = true
common-error.workspace = true
common-macro.workspace = true
snafu.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-util = { workspace = true, features = ["time"] }
s2n-quic.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["fs"] }
etcd-client = { version = "0.13.0", optional = true }
futures.workspace = true
axum = { workspace = true }
reqwest.workspace = true
chrono.workspace = true
parking_lot.workspace = true
bytes.workspace = true
redb = { version = "2.1.0", optional = true }
metrics.workspace = true
deadpool-sqlite = { version = "0.8.0", optional = true }
deadpool-postgres = { version = "0.13.0", optional = true }
bitvec = { version = "1.0.1", optional = true }
rusqlite = { version = "0.31.0", features = [
    "bundled",
    "chrono",
    "window",
], optional = true }
tokio-postgres = { version = "0.7.10", features = [
    "with-chrono-0_4",
], optional = true }
sysinfo = "0.30.11"

[dev-dependencies]
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "signal",
    "tracing",
] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.24.0"
console-subscriber = "0.2.0"
tracing-subscriber = "0.3"
opentelemetry = "0.23.0"
opentelemetry-otlp = "0.16.0"

[features]
local-memory = []
local-persist = [
    "local-memory",
    "redb",
    "deadpool-sqlite",
    "rusqlite",
    "bitvec",
]
distributed = [
    "local-memory",
    "etcd-client",
    "deadpool-postgres",
    "tokio-postgres",
    "bitvec",
]
