[package]
name = "comet-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
bytes.workspace = true
bincode = "1.3.3"
tokio-util.workspace = true
snafu.workspace = true
chrono = { workspace = true, features = ["serde"] }
parking_lot.workspace = true
s2n-quic.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
serde_json.workspace = true
metrics.workspace = true
url = "2.5.0"
sonyflake = { version = "0.2.0" }
regex = "1.10.4"
reqwest = { workspace = true, features = ["json"] }
common-error.workspace = true
common-macro.workspace = true
